--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
-    "xlsx": "https://esm.sh/xlsx@0.18.5"
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
+    "react-hot-toast": "https://esm.sh/react-hot-toast@2.4.1"
   }
 }
 </script>
